update by pushing to the remote repository:

--- a/.gitignore
+++ b/.gitignore
@@ -23,4 +23,14 @@ dist-ssr
 *.sln
 *.sw?
 
-*.env
+.env
+.env.local
+.env.*.local
+.env.production 
+.env.production.local
+.env.test
+.env.test.local
+.env.development
+.env.development.local
+.env.staging
+
